# triangulum

./: .gitattributes  .gitignore  BUGS.md  DECISIONS.md  DESIGN.md  ITERATION_LOG.md  LANDSCAPE.md  LICENSE  MULTIPLAYER.md  PERF.md  README.md  RUST-PRIMER.md  SOLAR.md  TRANSITIONS.md  WATER-CONTRACT.md  WEATHER.md  planet-generation.txt
planetgen/: __init__.py  __main__.py  biomes.py  chronicle.py  climate.py  config.py  grid.py  hydrology.py  noise.py  pipeline.py  recorder.py  render.py  tectonics.py
scripts/: bake_faces.py  bake_rivers.py  bake_weather.py  deploy_tunnel.ps1  export_noise_tables.py  make_videos.py
tests/: accel_test.py  smoke_test.py
viewer/: Cargo.toml  README.md  build.rs  build_identity.rs
viewer/assets/: solar_tuning.json  weather_tuning.json
viewer/examples/: caveprobe.rs  census.rs  colcensus.rs  colmap.rs  colof.rs  lakeprobe.rs  mapprobe.rs  moonchunkbench.rs  moonfeatures.rs  moonmap.rs  moonprefetchbench.rs  morph_probe.rs  physim.rs  play.rs  popdiff.rs  probe.rs  seamap.rs  tile_cost.rs  vegprobe.rs
viewer/interchange/: SOL_TINT_CHANGES.md
viewer/interchange/codex/: W4-FINDINGS.md
viewer/multiplayer/: Cargo.toml
viewer/multiplayer/src/: clock.rs  identity.rs  invite.rs  journal.rs  lib.rs  protocol.rs
viewer/scripts/: ab-channel.play  approach.play  ascent.play  auto-survey.play  b11-altitude.play  b12-settle.play  b16-live.play  b4-ascent-fast-repro.play  b4-ascent-fast.play  b4-ascent-perf.play  b4-ascent-repro.play  b4-descent-fast.play  b4-descent-fly.play  b4a-forest-descent.play  b4a-lateral.play  b4a2-converge.play  band.play  bandrepro.play  bandrepro2.play  bandrepro3.play  biome-blend-round3.play  biome-warp-evidence.play  biome-warp-round2.play  blackhole.play  blendrepro.play  bump-check.play  camera-controls.play  channel-probe.play  checksect.play  circle_check.play  cloudgrid-repro.play  cyclone-age.play  cyclone-arms-check.play  cyclone-closeup.play  cyclone-rotation.play  cyclonehunt.play  cyclones-bench.play  d14.play  descend.play  dip-test.play  (+126 more)
viewer/server/: Cargo.toml  build.rs
viewer/server/src/: main.rs
viewer/src/: camera.rs  keybindings.rs  lib.rs  main.rs  moon.rs  net.rs  noise.rs  noise_grad.rs  orbits.rs  planet.rs  player.rs  renderer.rs  rivers.rs  shader.wgsl  terrain.rs  ui.rs  voxel.rs  weather.rs
viewer/tests/: golden.rs  noise_golden.json
