[package]
name = "triangulum-viewer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Planetary voxel viewer for Triangulum: fly over Neisor from orbit to the grass"
repository = "https://github.com/dualmindblade/triangulum"

[dependencies]
anyhow = "1.0.103"
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.35.0"
egui-winit = "0.35.0"
glam = "0.33.2"
png = "0.18.1"
pollster = "0.4.0"
rayon = "1.12.0"
serde_json = "1.0.150"
wgpu = "30.0.0"
winit = "0.30.13"
