[package]
name = "triangulum-viewer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Planetary voxel viewer for Triangulum: fly over Neisor from orbit to the grass"
repository = "https://github.com/dualmindblade/triangulum"

[workspace]
members = ["multiplayer", "server"]
default-members = ["."]
resolver = "3"

[features]
default = []
multiplayer = [
    "dep:futures-util",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:triangulum-multiplayer",
]

[dependencies]
anyhow = "1.0.103"
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.35.0"
egui-winit = "0.35.0"
glam = "0.33.2"
png = "0.18.1"
pollster = "0.4.0"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
wgpu = "30.0.0"
winit = "0.30.13"
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"], optional = true }
tokio-tungstenite = { version = "0.28", optional = true }
triangulum-multiplayer = { path = "multiplayer", optional = true }
