[package]
name = "triangulum-viewer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Planetary voxel viewer for Triangulum: fly over Neisor from orbit to the grass"
repository = "https://github.com/dualmindblade/triangulum"

[workspace]
members = ["multiplayer", "server"]
default-members = ["."]
resolver = "3"

[features]
default = []
multiplayer = [
    "dep:futures-util",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:triangulum-multiplayer",
    "dep:rustls",
]

[dependencies]
anyhow = "1.0.103"
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.35.0"
egui-winit = "0.35.0"
glam = "0.33.2"
png = "0.18.1"
pollster = "0.4.0"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
wgpu = "30.0.0"
# "serde" gives KeyCode Serialize/Deserialize for keybindings.json
winit = { version = "0.30.13", features = ["serde"] }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"], optional = true }
tokio-tungstenite = { version = "0.28", optional = true, features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "logging", "std", "tls12"] }
triangulum-multiplayer = { path = "multiplayer", optional = true }
