[package]
name = "triangulum-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Headless authoritative multiplayer server for Triangulum"
build = "build.rs"
default-run = "triangulum-server"

[[bin]]
name = "triangulum-server"
path = "src/main.rs"

[[bin]]
name = "triangulum-client-sim"
path = "src/bin/triangulum-client-sim.rs"

[dependencies]
anyhow = "1"
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"
triangulum-multiplayer = { path = "../multiplayer" }
